fix text alignment

--- a/src/index.styl
+++ b/src/index.styl
@@ -69,6 +69,9 @@ section {
 #title {
   color: #9FB26D;
   text-align: center;
+  h1 {
+    line-height: 1;
+  }
   .top,
   .bottom {
     background-size: cover;
@@ -77,7 +80,6 @@ section {
     h1 {
       font-size: 4vw;
       left: 50%;
-      line-height: 1;
       mix-blend-mode: difference;
       position: absolute;
       text-transform: uppercase;
@@ -102,8 +104,7 @@ section {
     h1 {
       font-size: 3vw;
       font-weight: 500;
-      line-height: 1;
-      transform: translate(-50%, -1.125vw);
+      transform: translate(-50%, -1vw);
     }
   }
   .bottom {
@@ -112,9 +113,10 @@ section {
     height: 55%;
     h1 {
       font-weight: 500;
+      height: 4vw;
       margin-left: 3rem;
-      transform: scaleY(-1);
-      top: -1vw;
+      // transform: scaleY(-1);
+      top: -0.1vw;
     }
   }
 }
